--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
             <div class="menu">
                 <ul>
-                    <li><a href="Home.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="AboutUs.html">AboutUs</a></li>
                     <li><a href="Services.html">Services</a></li>
                     <li><a href="ContactUs.html">Contat Us</a></li>
